--- a/index.html
+++ b/index.html
@@ -810,13 +810,13 @@
                 </svg>
               </span>
 
-              <p>
+              <span>
                 I accept the terms and conditions of the
 
                 <a href="" target="_blank" class="checkbox-link">
                   Privacy Policy</a
                 >
-              </p>
+              </span>
             </label>
           </div>
           <button type="submit" class="submit-btn">Send</button>
