--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </ul>
         </address>
         <!-- MENU -->
-        <div class="menu-wrap is-hidden">
+        <div class="menu-wrap">
           <button type="button" class="menu-close">
             <svg class="menu-close-button-icon" width="8" height="8">
               <use href="./images/icons.svg#close-button-icon"></use>
@@ -78,53 +78,51 @@
               </ul>
             </nav>
 
-            <div class="menu-address-contacts-box">
-              <address class="menu-adress">
-                <ul class="menu-adress-list">
-                  <li class="menu-adress-list-item">
-                    <a class="menu-adress-link" href="tel:+110001111111"
-                      >+11 (000) 111-11-11</a
-                    >
-                  </li>
-                  <li class="menu-adress-list-item">
-                    <a class="menu-adress-link" href="mailto:info@devstudio.com"
-                      >info@devstudio.com</a
-                    >
-                  </li>
-                </ul>
-              </address>
-
-              <ul class="menu-contacts-list">
-                <li class="menu-contact-item">
-                  <a href="" class="menu-contact-link">
-                    <svg class="menu-contact-icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
+            <address class="menu-adress">
+              <ul class="menu-adress-list">
+                <li class="menu-adress-list-item">
+                  <a class="menu-adress-link" href="tel:+110001111111"
+                    >+11 (000) 111-11-11</a
+                  >
                 </li>
-                <li class="menu-contact-item">
-                  <a href="" class="menu-contact-link">
-                    <svg class="menu-contact-icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="menu-contact-item">
-                  <a href="" class="menu-contact-link">
-                    <svg class="menu-contact-icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="menu-contact-item">
-                  <a href="" class="menu-contact-link">
-                    <svg class="menu-contact-icon" width="24" height="24">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
+                <li class="menu-adress-list-item">
+                  <a class="menu-adress-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
                 </li>
               </ul>
-            </div>
+            </address>
+
+            <ul class="menu-contacts-list">
+              <li class="menu-contact-item">
+                <a href="" class="menu-contact-link">
+                  <svg class="menu-contact-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="menu-contact-item">
+                <a href="" class="menu-contact-link">
+                  <svg class="menu-contact-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="menu-contact-item">
+                <a href="" class="menu-contact-link">
+                  <svg class="menu-contact-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="menu-contact-item">
+                <a href="" class="menu-contact-link">
+                  <svg class="menu-contact-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
