--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </ul>
         </address>
         <!-- MENU -->
-        <div class="menu-wrap">
+        <div class="menu-wrap is-hidden">
           <button type="button" class="menu-close">
             <svg class="menu-close-button-icon" width="8" height="8">
               <use href="./images/icons.svg#close-button-icon"></use>
